# ogl-breakout

./: CMakeLists.txt  README.md  main.cpp
cmake/Modules/: Findglad.cmake
resources/test/: test_file.txt
source/: CMakeLists.txt  file_operations.cpp  file_operations.hpp  main.cpp
source/app/: CMakeLists.txt  main.cpp
source/app/shaders/: fragment.txt  vertex.txt
source/common/: CMakeLists.txt  arg_parser.cpp  arg_parser.hpp  file_operations.cpp  file_operations.hpp
source/common/arg_parser/: CMakeLists.txt  arg_parser.cpp
source/common/argument_parser/: CMakeLists.txt  argument_parser.cpp  argument_parser.hpp
source/common/file_operations/: CMakeLists.txt  file_operations.hpp
source/test/: CMakeLists.txt  argument_parser_tester.cpp  file_operations.cpp  file_operations_tester.cpp  opengl_tester.cpp
